images added need to fix overflow

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 html,body{
-	/*margin: 0 20px 0 20px;*/
 	padding: 0;
 	background-color: white;
 }
@@ -15,6 +14,9 @@ html,body{
   font-family: 'icons';
   src: url('Poppins-Light.ttf') format('ttf');
 }
+h1,p{
+	line-height: 45px;
+}
 .no-padding{
 	padding:0px;
 }
@@ -25,13 +27,11 @@ html,body{
 	justify-content: center;
 	z-index: 5;
 	overflow: hidden;
-	/*margin: 0 80px 0 80px;*/
 }
 .navigation div{
 	flex-grow: 1;
 	text-align: center;
 	cursor: pointer;
-	/*font-family: headers;*/
 }
 .login{
 	background:url('./assets/loginButton.png');
@@ -98,11 +98,72 @@ html,body{
 .blank-icons div{
 	padding: 40px;
 }
-.blob{
-	float: right;
-	/*margin-top: -20px;*/
-	margin-right: -30px;
+.image-bubble{
+	position: relative;
+	overflow: hidden;
 }
+.blob{
+	content: url('./assets/Bg.png');
+	float: right;
+	margin-right: -30px;
+	overflow: hidden !important;
+	z-index: 100;
+}
+.ut{
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	z-index: 1;
+	overflow: hidden !important;
+}
+.house{
+	position: absolute;
+	top: 270px;
+	right:5px;
+	z-index: 1;
+	overflow: hidden !important;
+}
+
+.nike{
+	position: absolute;
+	top: 540px;
+	right: 5px;
+	z-index: 1;
+	overflow: hidden !important;
+}
+.health{
+	position: absolute;
+	top: 5px;
+	right: 340px;
+	overflow: hidden;
+	z-index: 1;
+	overflow: hidden !important;
+}
+.jims{
+	position: absolute;
+	top: 270px;
+	right: 340px;
+}
+.smile{
+	position: absolute;
+	top: 540px;
+	right: 340px;
+}
+.nike2{
+	position: absolute;
+	top: 810px;
+	right: 5px;
+	z-index: 1;
+	overflow: hidden !important;
+}.house2{
+	position: absolute;
+	top: 810px;
+	right: 340px;
+	z-index: 1;
+	overflow: hidden !important;
+}
+
+
 
 
 
